--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	
-	<head>
-		<meta charset="UTF-8">
-		<title>Sign Data Generator</title>
-		<link rel="stylesheet" href="">
-		<style>
-		</style>
-		<script type="module" src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js"
-			crossorigin="anonymous"></script>
-	</head>
 
-	<body>
-		<h1>Sign Data Generator</h1>
+<head>
+	<meta charset="UTF-8">
+	<title>Sign Data Generator</title>
+	<link rel="stylesheet" href="">
+	<style>
+	</style>
+	<script type="module" src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js"
+		crossorigin="anonymous"></script>
+</head>
 
-		<p>Enter the name of a sign and perform it in different ways. When you are done, stop recording to download a JSON file of the hand landmark data for that sign.</p>
+<body>
+	<h1>Sign Data Generator</h1>
 
-		<button id="startCameraButton" onclick="startCamera()">Start Camera</button>
+	<p>Enter the name of a sign and perform it in different ways. When you are done, stop recording to download a JSON
+		file of the hand landmark data for that sign.</p>
 
-		<button id="startRecordingButton" onclick="startRecording()">Start Recording Hand Landmarks</button>
-		<button disabled id="stopRecordingButton" onclick="stopRecording()">Stop Recording Hand Landmarks</button>
+	<button id="startCameraButton" onclick="startCamera()">Start Camera</button>
 
-		<video id="webcam" autoplay playsinline width="640" height="480"></video>
+	<button id="startRecordingButton" onclick="startRecording()">Start Recording Hand Landmarks</button>
+	<button disabled id="stopRecordingButton" onclick="stopRecording()">Stop Recording Hand Landmarks</button>
 
-		<input id="signName" placeholder="Sign Name"></input>
+	<video id="webcam" autoplay playsinline width="640" height="480"></video>
 
-		<script type="module" src="index.js"></script>
-	</body>
+	<input id="signName" placeholder="Sign Name"></input>
+
+	<script type="module" src="index.js"></script>
+</body>
+
 </html>
